feature: added style to vew + present

--- a/views/present.ejs
+++ b/views/present.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/katex.min.css">
     <title>Present</title>
 
     <script src="/socket.io/socket.io.js"></script>
@@ -39,6 +40,18 @@
 
         #presentationContainer>div {
             flex: 1;
+            flex-direction: column;
+            justify-content: center;
+            padding-left: 16px;
+            height: 100%;
+        }
+
+        #presentationContainer .slide {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-left: 16px;
+            height: 100%;
         }
 
         #currentSlide {
