feature: added styles and highlight

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style/katex.min.css">
+    <link rel="stylesheet" href="/style/code.css">
     <style>
         #preview>.slide {
             margin: 4px;
