--- a/views/present.ejs
+++ b/views/present.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/katex.min.css">
+    <link rel="stylesheet" href="/style/code.css">
     <title>Present</title>
 
     <script src="/socket.io/socket.io.js"></script>
