--- a/views/present.ejs
+++ b/views/present.ejs
@@ -56,6 +56,7 @@
             border-left: orange 5px solid;
             padding-left: 8px;
         }
+
         #currentSlide,
         #nextSlide {
             position: relative;
@@ -129,6 +130,7 @@
         <div>
             <h2>Presentation (Watchers: <span id="watcherCount">0</span>)</h2>
             <div id="presentationContainer">
+                <style title="presentationStyle"></style>
                 <div id="presentation"></div>
                 <div id="currentSlide"></div>
                 <div id="nextSlide"></div>
@@ -218,12 +220,34 @@
 
                 const parsedPresentation = await response.json();
                 this.$presentation.innerHTML = parsedPresentation.presentation.html;
-
+                this.applyStyle(parsedPresentation.style);
                 // get all slides
                 this.slides = document.querySelectorAll('#presentation .slide');
 
                 this.socket.emit('present', this.presentation);
                 this.setSlide();
+            }
+
+            applyStyle(style) {
+                for (let i = 0; i < document.styleSheets.length; i++) {
+                    const css = document.styleSheets.item(i);
+                    if (css.title === 'presentationStyle') {
+                        const newStyle = document.createElement('style');
+                        newStyle.id = css.title;
+                        newStyle.title = css.title;
+                        newStyle.textContent = style;
+                        css.ownerNode.replaceWith(newStyle)
+
+                        const newCss = document.styleSheets.item(i);
+                        [...newCss.rules].forEach(rule => {
+                            if (rule.type === rule.STYLE_RULE) {
+                                rule.selectorText = rule.selectorText.split(',').map(selector => '#presentationContainer ' + selector).join(', ');
+                            }
+                        });
+
+                        break;
+                    }
+                }
             }
         }
 
